# htmlx

./: .gitignore  Cargo.toml  readme.md  rendered.html
cli/: Cargo.toml  build.rs  nav.html  ptsd.json  routes.json  types.ts
cli/PTSD/: home.html
cli/data/: brain-background.text  brain_regions.json
cli/src/: lib.rs  macros.rs  main.rs  render_html.rs  svg_ops.rs  typegen.rs  types.rs
cli/src/input/OTS126_PTSD_Assessment_Diagnosis_Screening_Node/: 10_d61002a0-659d-4b30-9485-d4eee1fccbe2.html  11_763dc90a-7d79-4db3-bc33-10cab3adffa4.html  12_3ddbec48-5328-4ca7-9177-051668d111de.html  13_0c47faa7-47d5-45d8-afbf-90f997f46ecb.html  14_0e1d7b77-2216-403a-91ec-d115d46caebc.html  15_0e1d7b77-2216-403a-91ec-d115d46caebc.html  18_00117b2c-aae4-4558-b8ea-9b9140f1351d.html  19_00117b2c-aae4-4558-b8ea-9b9140f1351d.html  21_d2c3f7e4-c073-4b6e-bd18-4536c3652d1e.html  22_d2c3f7e4-c073-4b6e-bd18-4536c3652d1e.html  23_580b6a78-18f4-410a-a80a-26d5d15e79cb.html  24_580b6a78-18f4-410a-a80a-26d5d15e79cb.html  25_2397e180-f20b-472b-9d5c-a6c97def1fdd.html  26_2397e180-f20b-472b-9d5c-a6c97def1fdd.html  27_eaff2ce2-e3d6-4bba-a63c-3efb12cb796f.html  28_eaff2ce2-e3d6-4bba-a63c-3efb12cb796f.html  29_e656ef91-dfe4-4377-81b1-07728febfaea.html  30_e656ef91-dfe4-4377-81b1-07728febfaea.html  31_9231d58a-7200-4125-9dba-2cc00f1e9012.html  3_2a104e7e-0cba-4467-b4ae-be6ee99c3c9d.html  5_2bdd6b41-5f2c-47f6-9665-44f4dc1bcd81.html  6_e7121e88-a5ca-4255-86a4-a174e4bb7434.html  7_7fc5e344-e530-41b7-bbf3-c65cded60fae.html  8_c55cbab3-655a-44a6-83eb-38584d068ed2.html  9_af10b6a4-7a63-4ff9-9ed8-66086070a84d.html  legend.html  metadata.json
cli/src/input/OTS126_PTSD_Disease_Burden_Node/: 0cdc8891-6de9-48b6-92f4-2293f0579622.html  11_475fe6d4-5fe5-4d6a-b9e0-a823b48caf42.html  12_2f336f06-da9c-40be-85c7-aedfbce5e0df.html  13_64b9e654-95dd-4e15-a9e2-f606130e9eae.html  14_23b39c37-891a-4557-aabb-d997f7b19918.html  15_94fd1036-f6c5-4120-a8d8-20b1d388e237.html  16_4463242c-a47a-4e90-8fbb-934280eb9ade.html  17_e0575462-3e34-4d78-93d8-d1af97c36e17.html  18_688e8c86-e679-4500-9400-7b746d2462a9.html  19_efff67b7-83fc-4ca8-9cfb-e02622963606.html  1e60c89c-1dca-4e61-b5c2-62f3c763962b.html  20_0b5efa9f-b88c-4779-b265-099b299a2e16.html  21_f33d8dc5-2f12-4745-89da-ea4873315cae.html  22_c7c6043c-abbd-4dc6-83e0-b03dbfa72527.html  23_51989c7c-6bfc-4b06-87cd-e9f258558644.html  24_c6c37591-bb6f-439e-afeb-16fee9007e03.html  25_693ad3f9-35cd-406f-9895-d0ea04646acd.html  26_524d760e-72b0-4a4f-b18f-bebd35105757.html  29_a80701fb-893f-42b9-9cee-ece46f9ea204.html  2_c15e1e82-6b73-4acb-b146-bbccb5cdc4ce.html  2c16e8e2-9200-46f4-9d71-8e386e425975.html  2e76714b-8d07-4557-849f-502525326146.html  30_cd6c8d9b-1f82-4cfd-9462-772585bc83d8.html  35_f54b078d-8dde-4ebe-97f8-f8e4e97a8e4b.html  38_40b13af6-fdb1-4242-8330-1e651d103947.html  40_718cc37f-4463-4116-ae02-a965372736ec.html  42_2cc53ac7-26f8-4771-b696-fae065dae509.html  4311e0a5-f350-46eb-89e6-82bd4cf6e02b.html  44_1bd244ce-d2c4-4ed2-8dc4-94a3641ae56a.html  475fe6d4-5fe5-4d6a-b9e0-a823b48caf42.html  47_a0bdcb3b-be14-4dd6-bbb6-78a8cc8b1a61.html  571974e7-bc2e-450f-98bf-8e6a79c0ca7b.html  (+19 more)
cli/src/js/: mod.rs
cli/src/outputs/: ptsd-symptoms-node.html  rendered.html
cli/src/pages/: mod.rs  ptsd_symptoms_node.rs
cli/src/routes/: mod.rs  ptsd_symptoms_node.rs
crates/blocks/: Cargo.toml  build.rs
crates/blocks/src/: lib.rs  node.rs  node_map.rs  page.rs
crates/blocks/templates/: bar-chart.html  block.html  blocks.html  reference.html  rich_text.html  tabs.html  text_with_icon.html
crates/open_ai/: Cargo.toml
crates/open_ai/src/: main.rs
(+403 files in other folders)
