[workspace]
resolver = "2"
edition = "2021"
members = ["cli", "crates/*"]


[workspace.dependencies]
thiserror = "1.0.57"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = { version = "1.0.116"}
specta = {version="2.0.0-rc.12",  features = [
    "typescript",
    "serde",
    "export",
    "uuid"
]}
color-eyre = { version = "0.6.3"}
uuid = { version = "1.8.0", features=["serde", "v4"]}
strum = { version = "0.26", features = ["derive"] }
