[package]
name = "cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { worspace = true, features = ["derive"]}
clap =  { version = "4.5.4", features = ["derive"]}
specta = { workspace = true,  features = [ 
    "typescript",
    "serde",
    "export"] }
thiserror = { workspace = true }
color-eyre = { workspace = true }
blocks = { path = "../crates/blocks"}
uuid = { workspace = true }
blocks-macros = { path = '../crates/blocks-macros'}