[package]
name = "blocks"
version = "0.1.0"
edition = "2021"



[dependencies]
askama = "0.12.1"
serde = { worspace = true, features = ["derive"]}
specta = { workspace = true,  features = [ 
    "typescript",
    "serde",
    "export"] }
uuid = { workspace = true, features = ["serde", "v4"]}
color-eyre = { worspace = true }
strum = { workspace = true }
html-escape = "0.2.13"