[package]
name = "blocks"
version = "0.1.0"
edition = "2021"



[dependencies]
serde = { worspace = true, features = ["derive"]}
specta = { workspace = true,  features = [ 
    "typescript",
    "serde",
    "export"] }
uuid = { workspace = true, features = ["serde", "v4"]}
color-eyre = { worspace = true }
strum = { workspace = true }
maud = { workspace = true }