[package]
name = "blocks"
version = "0.1.0"
edition = "2021"



[dependencies]
serde = { workspace = true, features = ["derive"]}
specta = { workspace = true,  features = [ 
    "typescript",
    "serde",
    "export"] }
uuid = { workspace = true, features = ["serde", "v4"]}
color-eyre = { workspace = true }
strum = { workspace = true }
maud = { workspace = true }
serde_json = { workspace = true }